implementing repository pattern

--- a/src/Banker.API/appsettings.json
+++ b/src/Banker.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Banker;Trusted_Connection=True;"
   }
 }
